fix typos in links

--- a/public/html/parts/header.ejs
+++ b/public/html/parts/header.ejs
@@ -67,7 +67,7 @@
     <meta property="twitter:image" content="/images/icons/icon-96x96.png">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
-    <script src="https://kit.fontawesome.com/59ecaaffaa.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/59ecaaffaa.js" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
@@ -109,12 +109,12 @@
 
     
     <script type="text/javascript" src="/js/logic/illustration.js"></script>
-    <script type="text/javascript" src="/js/ui/component/ImageElement.js"></script>
+    <script type="text/javascript" src="/js/ui/component/imageElement.js"></script>
 
-    <script type="text/javascript" src="/js/ui/component/Logo.js"></script>
+    <script type="text/javascript" src="/js/ui/component/logo.js"></script>
     
     <script type="text/javascript" src="/js/ui/component/textElement.js"></script>
-    <script type="text/javascript" src="/js/ui/component/LinkElement.js"></script>
+    <script type="text/javascript" src="/js/ui/component/linkElement.js"></script>
     <script type="text/javascript" src="/js/ui/panel/content.js"></script>
 
     <script type="text/javascript" src="/js/ui/panelcomponent/social.js"></script>
