--- a/public/html/article.ejs
+++ b/public/html/article.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Accessibility</title>
+    <title><%- title %></title>
     <%- include('parts/header.ejs'); %>
 </head>
 
