--- a/public/css/controller.css
+++ b/public/css/controller.css
@@ -168,3 +168,193 @@ input[type="range"]::-moz-range-thumb {
     margin-top: 0px;
     margin-right: 0px;
 }
+
+.configheader {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    align-items: flex-start;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    text-align: left;
+    padding: 5px;
+    row-gap: 10px;
+  }
+
+  .controller.container {
+    /* .panel.category
+    max-width: 350px; */
+    /* height: 100vh; */
+    padding: 0px;
+    row-gap: var(--margin-1);
+    font-size: 12px;
+    overflow-y: scroll;
+    /* padding-bottom: 100px; */
+    scrollbar-width: none;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.configheader > .text{
+    padding: 5%;
+    padding-top: 10%;
+    text-align: center;
+    font-size: 12pt;
+    row-gap: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.configheader > .text > .text{
+    
+    padding-top: 0px;
+}
+
+.subcontainer{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 100%;
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    padding: 2%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+
+}
+
+.subcontainer.vischoice > .vischoice{
+    padding: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-sizing: border-box;
+    row-gap: 10px;
+}
+
+.subcontainer.vischoice{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+.vischoice.icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    /* border: var(--secondary-color) 1px solid; */
+    padding: 5px;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    box-shadow: 3px 2px 6px 1px rgba(1, 71, 81, 0.25);
+}
+
+.vischoice.icon:active{
+    border: var(--secondary-color) solid 3px;
+}
+.vischoice.icon::checked{
+    border: var(--secondary-color) solid 3px;
+}
+
+.vischoice:disabled{
+    color: var(--tertiary-color);
+    opacity: 70%;
+}
+
+.vischoice:disabled:hover{
+    cursor:not-allowed;
+}
+
+.vischoice.icon > .descr{
+    display: flex;
+    flex-direction: row;
+}
+
+.vischoice > .descr > .text{
+    text-transform: capitalize;
+    font-size: 10pt;
+    font-weight: 300;
+    padding-top: 5px;
+    text-decoration: underline;
+    padding: 0px;
+}
+
+.descr{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    text-transform: capitalize;
+}
+
+.descr > .material-symbols-outlined{
+    font-size: 12pt;
+    padding: 0px;
+    width: auto;
+    font-weight: 200;
+}
+
+.gradient.subcontainer{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.gradient.subcontainer > hr{
+
+    --start: var(--primary-color);
+    --end: #ff0000;
+    height: 15px;
+    padding: 0px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: flex;
+    border-radius: 6px;
+    fill: var(--secondary-color);
+    background: linear-gradient(90deg, var(--start) 0%, var(--end) 100%);;
+    border: solid 1px var(--tertiary-color);
+}
+
+input[type="color"] {
+    --radius: 12px;
+	-webkit-appearance: none;
+	border: none;
+	width: calc(var(--radius) * 2);
+    height: calc(var(--radius) * 2);
+    border-radius: var(--radius);
+    margin-left: 5px;
+    margin-right: 5px;
+    border: solid 1px var(--tertiary-color);
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
+.gradient.subcontainer > input:nth-child(3){
+    justify-self: flex-end;
+}
+
+.colorpicker {
+    padding: 0px;
+    width: 25px;
+    height: 25px;
+    border: 0px;
+    appearance: none;
+    max-height: 50px;
+    inline-size: -webkit-fill-available;
+    cursor: pointer;
+}
