feat: add flat and elements visualizations; feat: connect visualizations, map and controller panel to pubsubs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,6 +63,7 @@ a:active {
     --margin-2: 24px;
     --margin-3: 36px;
     --margin-4: 48px;
+    --vis-opacity: 100%;
 
     --category1: #3ACE8E;
     --category2: #3ACE8E;
