--- a/public/css/container.css
+++ b/public/css/container.css
@@ -151,12 +151,8 @@
     min-width: calc(300px - var(--margin-2));
     max-width: calc(350px - var(--margin-2));
     margin: var(--margin-1);
-  }
-
-  
+  }  
 }
-
-
 
 .categorypanelheader {
   display: flex;
@@ -183,7 +179,7 @@
   /* display: flex;
   flex-direction: row; */
   display: grid;
-  grid-template-columns: 0.5fr 2fr 1fr;
+  grid-template-columns: 0.5fr 3fr 1fr 1fr;
 
   justify-content: space-between;
   align-items: center;
@@ -207,7 +203,7 @@
 
 .categoryheadertitle{
   /* margin-right: 33%; */
-  margin-bottom: 5%;
+  /* margin-bottom: 5%; */
   text-transform: capitalize;
 }
 
