fix: restore visualization of tag sliders; fix: remove social accounts bug

--- a/public/html/addPin.ejs
+++ b/public/html/addPin.ejs
@@ -30,6 +30,7 @@
 
     <script type="text/javascript" src="/js/karta/positioning.js"></script>
     <script type="text/javascript" src="/js/ui/component/pinButton.js"></script>
+    <script type="text/javascript" src="/js/ui/panelcomponent/vischoiceContainer.js"></script>
     <script type="text/javascript" src="/js/karta/karta.js"></script>
     <script type="text/javascript" src="/js/ui/panel/home.js"></script>
     <script type="text/javascript" src="/js/ui/panel/karta.js"></script>
